--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,67 @@
   <head>
     <meta charset="UTF-8">
     <title>Activity Tracker</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <h1>Activity Tracker</h1>
+
+    <div class="flex-wrapper">
+    <div class="single-chart">
+      <svg viewBox="0 0 36 36" class="circular-chart red">
+        <path class="circle-bg"
+          d="M18 2.0845
+            a 15.9155 15.9155 0 0 1 0 31.831
+            a 15.9155 15.9155 0 0 1 0 -31.831"
+        />
+        <path class="circle"
+          stroke-dasharray="30, 100"
+          d="M18 2.0845
+            a 15.9155 15.9155 0 0 1 0 31.831
+            a 15.9155 15.9155 0 0 1 0 -31.831"
+        />
+        <text x="18" y="20.35" class="percentage">30%</text>
+        <!-- <text x="18" y="35"class="active-minutes">Active Minutes</text> -->
+      </svg>
+    </div>
+    
+    <div class="single-chart">
+      <svg viewBox="0 0 36 36" class="circular-chart green">
+        <path class="circle-bg"
+          d="M18 2.0845
+            a 15.9155 15.9155 0 0 1 0 31.831
+            a 15.9155 15.9155 0 0 1 0 -31.831"
+        />
+        <path class="circle"
+          stroke-dasharray="60, 100"
+          d="M18 2.0845
+            a 15.9155 15.9155 0 0 1 0 31.831
+            a 15.9155 15.9155 0 0 1 0 -31.831"
+        />
+        <text x="18" y="20.35" class="percentage">60%</text>
+        <!-- <text class="total-steps">Total Steps</text> -->
+      </svg>
+    </div>
+
+    <div class="single-chart">
+      <svg viewBox="0 0 36 36" class="circular-chart blue">
+        <path class="circle-bg"
+          d="M18 2.0845
+            a 15.9155 15.9155 0 0 1 0 31.831
+            a 15.9155 15.9155 0 0 1 0 -31.831"
+        />
+        <path class="circle"
+          stroke-dasharray="90, 100"
+          d="M18 2.0845
+            a 15.9155 15.9155 0 0 1 0 31.831
+            a 15.9155 15.9155 0 0 1 0 -31.831"
+        />
+        <text x="18" y="20.35" class="percentage">90%</text>
+        <!-- <text class="sleep-hours">Sleep</text> -->
+      </svg>
+    </div>
+  </div>
 
     <script type="text/javascript" src="./scripts.js"></script>
   </body>
