--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <h1>Activity Tracker</h1>
-
     <div class="flex-wrapper">
     <div class="single-chart">
       <svg viewBox="0 0 36 36" class="circular-chart red">
@@ -27,7 +26,6 @@
         <!-- <text x="18" y="35"class="active-minutes">Active Minutes</text> -->
       </svg>
     </div>
-    
     <div class="single-chart">
       <svg viewBox="0 0 36 36" class="circular-chart green">
         <path class="circle-bg"
@@ -45,7 +43,6 @@
         <!-- <text class="total-steps">Total Steps</text> -->
       </svg>
     </div>
-
     <div class="single-chart">
       <svg viewBox="0 0 36 36" class="circular-chart blue">
         <path class="circle-bg"
@@ -64,7 +61,11 @@
       </svg>
     </div>
   </div>
-
+    <script type="text/javascript" src="./Activity.js"></script>
+    <script type="text/javascript" src="./Hydration.js"></script>
+    <script type="text/javascript" src="./Sleep.js"></script>
+    <script type="text/javascript" src="./UserRepository.js"></script>
+    <script type="text/javascript" src="./User.js"></script>
     <script type="text/javascript" src="./scripts.js"></script>
   </body>
 </html>
