--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <h1>Activity Tracker</h1>
+    <header>
+      <img class="robbie" src="file:///Users/kaylalarson/Downloads/man%20(1).svg">
+      <h1>Welcome Back, <span class="user-name">Rupert</span>!</h1>
+    </header>
     <div class="flex-wrapper">
     <div class="single-chart">
       <svg viewBox="0 0 36 36" class="circular-chart red">
