--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
             a 15.9155 15.9155 0 0 1 0 31.831
             a 15.9155 15.9155 0 0 1 0 -31.831"
         />
-        <text x="18" y="20.35" class="percentage">30%</text>
-        <!-- <text x="18" y="35"class="active-minutes">Active Minutes</text> -->
+        <text x="18" y="20.35" class="active-minutes percentage">30%</text>
       </svg>
+      <text class="text sleep">Sleep Activity</text>
     </div>
     <div class="single-chart">
       <svg viewBox="0 0 36 36" class="circular-chart green">
@@ -42,9 +42,9 @@
             a 15.9155 15.9155 0 0 1 0 31.831
             a 15.9155 15.9155 0 0 1 0 -31.831"
         />
-        <text x="18" y="20.35" class="percentage">60%</text>
-        <!-- <text class="total-steps">Total Steps</text> -->
+        <text x="18" y="20.35" class="total-steps percentage">60%</text>
       </svg>
+      <text class="text active-minutes">Active Minutes</text>
     </div>
     <div class="single-chart">
       <svg viewBox="0 0 36 36" class="circular-chart blue">
@@ -54,14 +54,14 @@
             a 15.9155 15.9155 0 0 1 0 -31.831"
         />
         <path class="circle"
-          stroke-dasharray="90, 100"
+          stroke-dasharray="10, 100"
           d="M18 2.0845
             a 15.9155 15.9155 0 0 1 0 31.831
             a 15.9155 15.9155 0 0 1 0 -31.831"
         />
-        <text x="18" y="20.35" class="percentage">90%</text>
-        <!-- <text class="sleep-hours">Sleep</text> -->
+        <text x="18" y="20.35" class="sleep-hours percentage">10%</text>
       </svg>
+      <text class="text total-steps">Total Steps</text>
     </div>
   </div>
     <script type="text/javascript" src="./Activity.js"></script>
