--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <title>Activity Tracker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="normalize" type="text/css" href="normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <header>
-      <img class="robbie" src="file:///Users/kaylalarson/Downloads/man%20(1).svg">
-      <h1>Welcome Back, <span class="user-name">Rupert</span>!</h1>
+      <container class="user-avatar">
+        <img class="robbie" src="file:///Users/kaylalarson/Downloads/man%20(1).svg">
+        <h1>Welcome Back, <span id="user-name"></span>!</h1>
+      </container>
+      <container class="fitlit-logo">
+        <h2>FitLit</h2>
+      </container>
     </header>
+    <container class="toggle-user-info">
+      <p class="user-info">Full Name: <span id="name"></span></p>
+      <p class="user-info">Address: <span id="address"></span></p>
+      <p class="user-info">Email: <span id="email"></span></p>
+    </container>
     <div class="flex-wrapper">
     <div class="single-chart">
       <svg viewBox="0 0 36 36" class="circular-chart red">
@@ -20,12 +31,12 @@
             a 15.9155 15.9155 0 0 1 0 -31.831"
         />
         <path class="circle"
-          stroke-dasharray="30, 100"
+          stroke-dasharray="90, 100"
           d="M18 2.0845
             a 15.9155 15.9155 0 0 1 0 31.831
             a 15.9155 15.9155 0 0 1 0 -31.831"
         />
-        <text x="18" y="20.35" class="active-minutes percentage">30%</text>
+        <text x="18" y="20.35" class="active-minutes percentage">90%</text>
       </svg>
       <text class="text sleep">Sleep Activity</text>
     </div>
@@ -64,11 +75,20 @@
       <text class="text total-steps">Total Steps</text>
     </div>
   </div>
+    <script type="text/javascript" src="./User.js"></script>
+    <script type="text/javascript" src="../data/activityData.js"></script>
+    <script type="text/javascript" src="../data/hydrationData.js"></script>
+    <script type="text/javascript" src="../data/sleepData.js"></script>
+    <script type="text/javascript" src="../data/testData.js"></script>
+    <script type="text/javascript" src="../data/testObj.js"></script>
+    <script type="text/javascript" src="../data/userData.js"></script>
     <script type="text/javascript" src="./Activity.js"></script>
     <script type="text/javascript" src="./Hydration.js"></script>
     <script type="text/javascript" src="./Sleep.js"></script>
+    <script type="text/javascript" src="./HydrationRepository.js"></script>
+    <script type="text/javascript" src="./ActivityRepository.js"></script>
+    <script type="text/javascript" src="./SleepRepository.js"></script>
     <script type="text/javascript" src="./UserRepository.js"></script>
-    <script type="text/javascript" src="./User.js"></script>
     <script type="text/javascript" src="./scripts.js"></script>
   </body>
 </html>
