Instantiates random user on page load
co-authored-by: Kayla Larson <kayla.larson1990@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="normalize" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
     <header>
       <container class="user-avatar">
-        <img class="robbie" src="file:///Users/kaylalarson/Downloads/man%20(1).svg">
+        <img class="robbie" src="images/rob.png">
         <h1>Welcome Back, <span id="user-name"></span>!</h1>
       </container>
       <container class="fitlit-logo">
