--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
       <p class="user-info">Email: <span id="email"></span></p>
     </container>
     <div class="flex-wrapper">
-    <div class="single-chart">
+    <div class="single-chart" id="user-steps">
       <svg viewBox="0 0 36 36" class="circular-chart red">
         <path class="circle-bg"
           d="M18 2.0845
@@ -38,9 +38,10 @@
             a 15.9155 15.9155 0 0 1 0 31.831
             a 15.9155 15.9155 0 0 1 0 -31.831"
         />
-        <text x="18" y="20.35" class="active-minutes percentage">90%</text>
+        <text x="18" y="20.35" class="active-minutes percentage">steps</text>
       </svg>
-      <text class="text sleep">Sleep Activity</text>
+      <text class="text sleep">Your step goal: <span id='user-step-goal'></span></text>
+      <text class="text sleep">Average FitLit user goal: <span id='avg-step-goal'></span></text>
     </div>
     <div class="single-chart">
       <svg viewBox="0 0 36 36" class="circular-chart green">
