--- a/src/index.html
+++ b/src/index.html
@@ -59,9 +59,9 @@
             a 15.9155 15.9155 0 0 1 0 31.831
             a 15.9155 15.9155 0 0 1 0 -31.831"
         />
-        <text x="18" y="20.35" class="total-steps percentage">60%</text>
+        <text x="18" y="20.35" class="total-steps percentage">h2o</text>
       </svg>
-      <text class="text active-minutes">Active Minutes</text>
+      <text class="text active-minutes">Your water intake: <span id='h2o-intake'></span></text>
     </div>
     <div class="single-chart">
       <svg viewBox="0 0 36 36" class="circular-chart blue">
@@ -81,20 +81,20 @@
       <text class="text total-steps">Total Steps</text>
     </div>
   </div>
-    <script type="text/javascript" src="./User.js"></script>
     <script type="text/javascript" src="../data/activityData.js"></script>
     <script type="text/javascript" src="../data/hydrationData.js"></script>
     <script type="text/javascript" src="../data/sleepData.js"></script>
     <script type="text/javascript" src="../data/testData.js"></script>
     <script type="text/javascript" src="../data/testObj.js"></script>
     <script type="text/javascript" src="../data/userData.js"></script>
+    <script type="text/javascript" src="./User.js"></script>
     <script type="text/javascript" src="./Activity.js"></script>
     <script type="text/javascript" src="./Hydration.js"></script>
     <script type="text/javascript" src="./Sleep.js"></script>
+    <script type="text/javascript" src="./UserRepository.js"></script>
     <script type="text/javascript" src="./HydrationRepository.js"></script>
     <script type="text/javascript" src="./ActivityRepository.js"></script>
     <script type="text/javascript" src="./SleepRepository.js"></script>
-    <script type="text/javascript" src="./UserRepository.js"></script>
     <script type="text/javascript" src="./scripts.js"></script>
   </body>
 </html>
