--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
         <text x="18" y="20.35" class="active-minutes percentage">steps</text>
       </svg>
       <text class="text sleep">Your step goal: <span id='user-step-goal'></span></text>
-      <text class="text sleep">Average FitLit user goal: <span id='avg-step-goal'></span></text>
+      <text class="text sleep">Average FitLit user goal: <span id="avg-step-goal"></span></text>
     </div>
     <div class="single-chart">
       <svg viewBox="0 0 36 36" class="circular-chart green">
@@ -61,7 +61,8 @@
         />
         <text x="18" y="20.35" class="total-steps percentage">h2o</text>
       </svg>
-      <text class="text active-minutes">Your water intake: <span id='h2o-intake'></span></text>
+      <text class="text active-minutes">Your water intake: <span id="h20-intake"></span></text>
+      <text class="text weekly-active-minutes">Your weekly water intake: <span id="weekly-h20-intake"></span></text>
     </div>
     <div class="single-chart">
       <svg viewBox="0 0 36 36" class="circular-chart blue">
