--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,8 @@
         />
         <text x="18" y="20.35" class="sleep-hours percentage">10%</text>
       </svg>
-      <text class="text total-steps">Total Steps</text>
+      <text class="text active-minutes">Your water intake: <span id="avg-daily-sleep"></span></text>
+      <text class="text weekly-active-minutes">Your weekly water intake: <span id="avg-total-sleep"></span></text>
     </div>
   </div>
     <script type="text/javascript" src="../data/activityData.js"></script>
