Fix random user functionality
co-authored-by: Hannah Hyde <hannahhyde@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
       </svg>
       <text class="text active-minutes">Your daily hours slept: <span id="avg-daily-sleep"></span></text>
       <text class="text weekly-active-minutes">Your average hours slept: <span id="avg-total-sleep"></span></text>
-      <text class="text weekly-active-minutes">Your weekly hours slept: <span id="weekly-sleep"></span></text>
+      <text class="text weekly-active-minutes">Your weekly hours: <span id="weekly-sleep"></span></text>
     </div>
   </div>
     <script type="text/javascript" src="../data/activityData.js"></script>
