--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,9 @@
     <script type="text/javascript" src="../data/hydrationData.js"></script>
     <script type="text/javascript" src="../data/sleepData.js"></script>
     <script type="text/javascript" src="../data/testData.js"></script>
-    <script type="text/javascript" src="../data/testObj.js"></script>
+    <script type="text/javascript" src="../data/testActivity.js"></script>
+    <script type="text/javascript" src="../data/testSleep.js"></script>
+    <script type="text/javascript" src="../data/testHydration.js"></script>
     <script type="text/javascript" src="../data/userData.js"></script>
     <script type="text/javascript" src="./User.js"></script>
     <script type="text/javascript" src="./Activity.js"></script>
