Fix avg stairs climbed in dom

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
         <text class="text active">Your Active Minutes: <span id='user-active-min' class="text-style"></span> <div class="text-style">minutes</div></text>
         <text class="text active">Your Step Goal: <span id='user-step-goal' class="text-style"></span></text>
         <text class="text active">Average FitLit user goal: <span id="avg-step-goal" class="text-style"></span></text>
+        <text class="text active">Flights of Stairs Climbed: <span id="stairs-climbed" class="text-style"></span></text>
       </container>
     </div>
     <container class="user-card">
