Fix all three methods on activity repo to work properly
co-authored-by: Hannah Hyde <hannahhyde@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,7 @@
         <text class="text active">Average FitLit user goal: <span id="avg-step-goal" class="text-style"></span></text>
         <text class="text active">Flights of Stairs Climbed: <span id="stairs-climbed" class="text-style"></span></text>
         <text class="text active">All Users Average Steps: <span id="all-users-avg-steps" class="text-style"></span></text>
+        <text class="text active">All Users Average Active Minutes: <span id="all-users-avg-mins" class="text-style"></span></text>
       </container>
     </div>
     <container class="user-card">
