--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     </container>
     <div class="flex-wrapper">
     <div class="single-chart" id="user-steps">
-      <svg viewBox="0 0 36 36" class="circular-chart red">
+      <svg viewBox="0 0 36 36" class="circular-chart">
         <path class="circle-bg"
           d="M18 2.0845
             a 15.9155 15.9155 0 0 1 0 31.831
@@ -52,12 +52,15 @@
         <text class="text active">All Users Average Active Minutes: <span id="all-users-avg-mins" class="text-style"></span></text>
       </container>
     </div>
+    
     <container class="user-card">
-      <p class="card-text water-intake">Your water intake: <span id="h20-intake"></span></p>
-      <p class="card-text weekly-water-intake">Your weekly water intake: <span id="weekly-h20-intake"></span></p>
+      <i class="fas fa-tint"></i>
+      <p class="card-text water-intake">Your water intake: <span id="h20-intake"> oz</span></p>
+      <p class="card-text weekly-water-intake">Your weekly water intake: <span id="weekly-h20-intake"> oz</span></p>
     </container>
 
     <container class="user-card">
+      <i class="fas fa-moon"></i>
       <p class="card-text active-minutes">Your daily hours slept: <span id="avg-daily-sleep"></span></p>
       <p class="card-text avg-stotal-sleep">Your average hours slept: <span id="avg-total-sleep"></span></p>
       <p class="card-text weekly-sleep">Your weekly hours: <span id="weekly-sleep"></span></p>
