--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
         <text x="18" y="20.35" class="active-minutes percentage">steps</text>
       </svg>
       <container class="steps">
-        <text class="text active">Your Active Minutes: <span id='user-active-min' class="text-style"></span> <div class="text-style">minutes</div></text>
+        <text class="text active">Your Active Minutes: <span id='user-active-min' class="text-style"></span></text>
         <text class="text active">Your Step Goal: <span id='user-step-goal' class="text-style"></span></text>
         <text class="text active">Average FitLit user goal: <span id="avg-step-goal" class="text-style"></span></text>
         <text class="text active">Flights of Stairs Climbed: <span id="stairs-climbed" class="text-style"></span></text>
